[wheel]
universal = 1

[metadata]
license_file = LICENSE

# Flake8 Configuration
[flake8]
max_complexity = 11
max_line_length = 120
import_order_style = google
application_import_names = cryptoshredding
builtins = raw_input
ignore =
    # Ignoring D205 and D400 because of false positives
    D205, D400,
    # Ignoring D401 pending discussion of imperative mood
    D401,
    # Ignoring D202 (no blank lines after function docstring) because mypy confuses flake8
    D202,
    # E203 is not PEP8 compliant https://github.com/ambv/black#slices
    E203,
    # W503 is not PEP8 compliant https://github.com/ambv/black#line-breaks--binary-operators
    W503